@@ -4528,8 +4528,8 @@ int skill_castend_nodamage_id (struct block_list *src, struct block_list *bl, in
 	case SM_ENDURE:
 		clif_skill_nodamage(src,bl,skillid,skilllv,
 			sc_start(bl,type,100,skilllv,skill_get_time(skillid,skilllv)));
-		if (sd && skill_get_cooldown(skillid, skilllv))
-			skill_blockpc_start (sd, skillid, skill_get_cooldown(skillid, skilllv));
+		if (sd)
+			skill_blockpc_start (sd, skillid, skill_get_time2(skillid,skilllv));
 		break;
 
 	case AS_ENCHANTPOISON: // Prevent spamming [Valaris]
@@ -6020,7 +6020,7 @@ int skill_castend_nodamage_id (struct block_list *src, struct block_list *bl, in
 		}
 		clif_skill_nodamage(src,bl,skillid,skilllv,
 			sc_start4(bl,type,100,skilllv,skillid,src->id,skill_get_time(skillid,skilllv),1000));
-		if (sd && skill_get_cooldown(skillid, skilllv)) skill_blockpc_start (sd, skillid, skill_get_cooldown(skillid, skilllv)); //skill_get_time(skillid, skilllv)+3000);
+		if (sd) skill_blockpc_start (sd, skillid, skill_get_time(skillid, skilllv)+3000);
 		break;
 
 	case PF_MINDBREAKER:
@@ -8289,7 +8289,7 @@ int skill_castend_pos2(struct block_list* src, int x, int y, int skillid, int sk
 		if (unit_movepos(src, x, y, 1, 1)) {
 			clif_skill_poseffect(src,skillid,skilllv,src->x,src->y,tick);
 //			clif_slide(src, src->x, src->y); //Poseffect is the one that makes the char snap on the client...
-			if (sd && skill_get_cooldown(skillid, skilllv)) skill_blockpc_start (sd, MO_EXTREMITYFIST, skill_get_cooldown(skillid, skilllv)); //2000);
+			if (sd) skill_blockpc_start (sd, MO_EXTREMITYFIST, 2000);
 		}
 		break;
 	case NJ_SHADOWJUMP:
